<resources>
    <string name="app_name">HuoApp</string>
    <string name="exit_app">再按一次退出app</string>
    <string name="sign">签到</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="wed">三</string>
    <string name="tues">二</string>
    <string name="thur">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="person_info">个人资料</string>
    <string name="my_game">我的游戏</string>
    <string name="my_feed">我的动态</string>
    <string name="record_detail">记录明细</string>
    <string name="invited_record">邀请记录</string>
    <string name="message_record">消息记录</string>
    <string name="my">我的</string>
    <string name="mine_game">我的游戏</string>
    <string name="input">输入</string>
    <string name="withdraw">提现</string>
    <string name="choice_withdraw_type">选择提现方式</string>
    <string name="mobile_recharge">手机充值</string>
    <string name="mobile">手机号</string>
    <string name="input_mobile_hint">输入手机号</string>
    <string name="setting">设置</string>
    <string name="change_password">修改密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="user_rule">用户条约</string>
    <string name="contact_us">联系我们</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="please_input_your_moblie">请输入您的手机号</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="please_input_your_new_pwd">请输入您的新密码</string>
    <string name="please_re_input_your_new_pwd">请再次输入您的新密码</string>

    <string name="format_time_year" formatted="false">%s年前</string>
    <string name="format_time_month" formatted="false">%s个月前</string>
    <string name="format_time_day" formatted="false">%s天前</string>
    <string name="format_time_hour" formatted="false">%s小时前</string>
    <string name="format_time_minute" formatted="false">%s分钟前</string>
    <string name="format_time_sec">刚刚</string>
    <string name="via">头像</string>
    <string name="search">搜索</string>
    <string name="info_change">资料修改</string>
    <string name="name">名字</string>
    <string name="sex">性别</string>
    <string name="phone">手机</string>
    <string name="wechat">微信</string>
    <string name="save">保存</string>
    <string name="detail">明细</string>
    <string name="clear">清空</string>
    <string name="how_make_money">怎么赚钱</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
</resources>
