<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            style="@style/HuoCalendar"
            android:text="@string/sun"/>

        <TextView
            style="@style/HuoCalendar"
            android:text="@string/mon"/>

        <TextView
            style="@style/HuoCalendar"
            android:text="@string/tues"/>

        <TextView
            style="@style/HuoCalendar"
            android:text="@string/wed"/>

        <TextView
            style="@style/HuoCalendar"
            android:text="@string/thur"/>

        <TextView
            style="@style/HuoCalendar"
            android:text="@string/fri"/>

        <TextView
            style="@style/HuoCalendar"
            android:text="@string/sat"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_calendar"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

</LinearLayout>