<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/gradient_bg">

        <TextView
            style="@style/app_bar_text"
            android:text="@string/sign"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="#333333"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/btn_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_switch"
            android:layout_marginRight="20dp"
            android:textSize="14sp"
            android:textColor="#333333"
            android:text="签到提醒"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/gradient_bg"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:paddingBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <TextView
            style="@style/HuoCalendar"
            android:text="@string/sun"/>
        <TextView
            style="@style/HuoCalendar"
            android:text="@string/mon"/>
        <TextView
            style="@style/HuoCalendar"
            android:text="@string/tues"/>
        <TextView
            style="@style/HuoCalendar"
            android:text="@string/wed"/>
        <TextView
            style="@style/HuoCalendar"
            android:text="@string/thur"/>
        <TextView
            style="@style/HuoCalendar"
            android:text="@string/fri"/>
        <TextView
            style="@style/HuoCalendar"
            android:text="@string/sat"/>
    </LinearLayout>

    <com.example.huoapp.widget.calendar.view.MonthPager
        android:id="@+id/vp_calendar"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhite"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:gravity="center"
            android:text="累计签到1天"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="26dp"
            android:background="#bcbcbc"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:gravity="center"
            android:text="满15天，奖1.5元"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/button_bg"
        android:text="签到奖0.5元"/>

</LinearLayout>