<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <TextView
            style="@style/app_bar_text"
            android:text="@string/change_password"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center_vertical">

        <EditText
            style="@style/edit_text_style"
            android:layout_weight="1"
            android:hint="@string/please_input_your_moblie"/>

        <View
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/colorGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:text="@string/get_auth_code"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:textSize="14sp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorGray"/>

    <EditText
        style="@style/edit_text_style"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/please_input_auth_code"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorGray"/>

    <EditText
        style="@style/edit_text_style"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/please_input_your_new_pwd"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorGray"/>

    <EditText
        style="@style/edit_text_style"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/please_re_input_your_new_pwd"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorGray"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="完成绑定"
        android:background="@drawable/button_bg"
        android:layout_margin="20dp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>
</LinearLayout>